# rust_channels

./: .gitignore  Cargo.toml  README.md  stack.yaml
.github/: CODEOWNERS
.github/workflows/: lint.yml  release.yml  test-and-build.yml
rch/: Cargo.toml  Rocket.toml
rch/src/: main.rs  partials.rs  routes.rs
rchdb/: Cargo.toml
rchdb/src/: lib.rs  models.rs  schema.rs
