[package]
name = "rch"
version = "0.1.0"
authors = ["Patrick Delaney <pthomasdelaney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_codegen = "0.4.7"
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
rchdb = { path = "../rchdb" }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_postgres_pool","json"]