[package]
name = "rchdb"
version = "0.1.0"
authors = ["Patrick Delaney <pthomasdelaney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_derive = "1.0.123"
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }
dotenv = "0.15.0"